--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto": "^1.0.1",
     "lucide-react": "^0.503.0",
+    "marked": "^16.0.0",
     "next": "15.3.1",
     "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
@@ -33,11 +35,17 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
+    "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
+    "remark-gfm": "^4.0.1",
+    "resend": "^4.7.0",
     "shadcn": "^2.7.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.2.8",
+    "uuid": "^11.1.0",
     "zod": "^3.25.67"
   },
   "devDependencies": {
