--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "resend": "^4.7.0",
     "shadcn": "^2.7.0",
     "sonner": "^2.0.5",
+    "swr": "^2.3.4",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.2.8",
